--- a/css/header.css
+++ b/css/header.css
@@ -3,7 +3,7 @@
   color: aqua;
 }
 
-.background {
+.header-background {
   background-image: url("../image/2143091ac7955e5785542116c342c11d.jpg");
   background-size: no-repeat;
   background-position: center;
@@ -11,18 +11,35 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
 }
 
 .dropdown {
   width: 100%;
   display: flex;
+  flex-direction: column;
+}
+
+.dropdown-menu {
+  width: 100%;
+  height: 100px;
+  background: linear-gradient( 360deg, #fff, #ffffff00 );
+  display: flex;
   justify-content: space-around;
   list-style-type: none;
 }
 
 .dropdown-item {
+  width: 100px;
+  height: 40px;
+  text-align: center;
+  display: none;
   background-color: black;
 }
+
+.dropdown-menu:hover .dropdown-item, .dropdown-item:hover{
+  display: block;
+}
+
 
