--- a/index.css
+++ b/index.css
@@ -1,8 +1,13 @@
 @import url(./css/main.css);
 @import url(./css/header.css);
+@import url(./css/event.css);
+@import url(./css/delivery.css);
 
 * {
   box-sizing: border-box;
+}
+
+body {
   margin: 0px;
   padding: 0px;
 }
@@ -13,12 +18,13 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background-color: black;
+  background-color: rgb(255, 4, 4);
 }
 
-.main {
-  background-color: brown;
+h2 {
+  margin-top: 0px;
 }
+
 
 .footer {
   background-color: chartreuse;
