--- a/css/delivery.css
+++ b/css/delivery.css
@@ -2,3 +2,12 @@
   height: 100vh;
   background-color: chocolate;
 }
+
+.delivery-background {
+  background-image: url("../image/49ffd2682143855b5595.jpg");
+  background-size: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 100%;
+  padding: 150px 50px 50px 50px;
+}
