--- a/css/header.css
+++ b/css/header.css
@@ -1,6 +1,5 @@
 .header {
   height: 100vh;
-  color: aqua;
 }
 
 .header-background {
@@ -8,38 +7,40 @@
   background-size: no-repeat;
   background-position: center;
   background-size: cover;
+  max-width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
 }
 
-.dropdown {
+.container .dropdown {
   width: 100%;
-  display: flex;
-  flex-direction: column;
+  max-width: inherit;
+  position: fixed;
 }
 
 .dropdown-menu {
-  width: 100%;
-  height: 100px;
-  background: linear-gradient( 360deg, #fff, #ffffff00 );
+  height: 150px;
+  background: linear-gradient(#fff, #ffffff00 );
   display: flex;
   justify-content: space-around;
+  align-items: center;
   list-style-type: none;
 }
 
 .dropdown-item {
   width: 100px;
   height: 40px;
+  font-size: 25px;
   text-align: center;
-  display: none;
-  background-color: black;
+  color: rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0);
 }
 
 .dropdown-menu:hover .dropdown-item, .dropdown-item:hover{
-  display: block;
+  color: rgba(0, 0, 0, 1);
 }
 
 
