--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@
 @import url(./css/header.css);
 @import url(./css/event.css);
 @import url(./css/delivery.css);
+@import url(./css/footer.css);
 
 @font-face {      
   font-family: 'fon';
