--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@
 @import url(./css/event.css);
 @import url(./css/delivery.css);
 @import url(./css/footer.css);
+@import url(./css/main-grid.css);
 
 @font-face {      
   font-family: 'fon';
