--- a/css/main-grid.css
+++ b/css/main-grid.css
@@ -1,6 +1,6 @@
 .main-background {
   display: grid;
-  grid-template-columns:300px auto;
+  grid-template-columns:30% 70%;
   grid-template-rows: 50px auto;
 }
 
