--- a/css/footer.css
+++ b/css/footer.css
@@ -11,6 +11,6 @@
   list-style-image: url(../image/footer/почта.png);
 }
 
-.contacts-menu .map {
+.contacts-menu .map-footer {
   list-style-image: url(../image/footer/карта.png);
 }
