--- a/css/event.css
+++ b/css/event.css
@@ -1,6 +1,5 @@
 .event {
   height: 100vh;
-  background-color: darkblue;
 }
 
 .event-background {
@@ -23,4 +22,15 @@
   width: 80%;
   min-height: 100px;
   background-color: azure;
+  border: 4px solid black;
+}
+
+.event-item-title {
+  margin: 20px;
+  font-size: 40px;
+}
+
+.event-item-paragraph {
+  margin: 20px;
+  font-size: 20px;
 }
