--- a/index.css
+++ b/index.css
@@ -21,7 +21,7 @@ body {
 }
 
 .container {
-  max-width: 1200px;
+  /* max-width: 1200px; */
   margin: 0px auto;
   display: flex;
   flex-direction: column;
@@ -31,7 +31,7 @@ body {
 
 h2 {
   margin-top: 0px;
-  font-size: 40px;
+  font-size: 60px;
 }
 
 .footer {
