--- a/css/delivery.css
+++ b/css/delivery.css
@@ -9,6 +9,8 @@
   background-size: cover;
   height: 100%;
   padding: 150px 50px 50px 50px;
+
+  background: radial-gradient(circle, rgba(180,50,50,1) 10%, rgba(0,0,0,1) 90%);
 }
 
 .delivery-content * {
