--- a/css/footer.css
+++ b/css/footer.css
@@ -1,3 +1,8 @@
+.footer {
+  background: radial-gradient(circle, rgba(180,50,50,1) 10%, rgba(0,0,0,1) 90%);
+  padding: 10px 50px 10px 50px;
+}
+
 .contacts-menu-item {
   list-style-type: none;
   font-size: 24px;
