--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,16 @@
-.main {
- height: 100vh; 
-}
+/* .main {
+  min-height: 100vh;   
+} */
 
 .main-background {
   background-image: url("../image/49ffd2682143855b5595.jpg");
   background-size: no-repeat;
   background-position: center;
   background-size: cover;
-  min-height: 100%;
-  padding: 150px 30px 30px 30px;
+  height: 100%;
+  padding: 150px 30px 30px 30px;  
+
+  background: radial-gradient(circle, rgba(180,50,50,1) 10%, rgba(0,0,0,1) 90%);;
 }
 
 .menu {
@@ -29,7 +31,7 @@
   justify-content: space-between;
   align-items: center;
   border: 2px solid rgb(0, 0, 0);
-  border-radius: 12px;
+  border-radius: 12px;  
   text-align: end;  
 }
 
@@ -37,7 +39,8 @@
   margin: 0px;
   font-size: 24px;
   font-weight: 700; 
-  color: brown;
+  color: rgb(255, 255, 255);
+  text-shadow: rgb(255, 0, 0) 1px 0 15px;
 }
 
 .menu-item-button {  
@@ -56,6 +59,9 @@
   background-size: no-repeat;
   background-position: center;
   background-size: cover;
+  border: 5px solid rgb(0, 0, 0);
+  border-radius: 30px;
+  box-shadow: 0px 0px 20px rgb(0, 0, 0);
 }
 
 .content-item {
@@ -63,7 +69,8 @@
   display: grid;
   grid-template-rows: 1fr 1fr 1fr 50px 50px;
   grid-template-columns: 1fr 80px;
-  color: chartreuse;
+  color: rgb(255, 255, 255);
+  text-shadow: rgb(255, 0, 0) 1px 0 15px;
 }
 
 .content-item-title {
@@ -102,7 +109,8 @@
   border-left-width: 100px;
   border-bottom-width: 3px;
   border-bottom-color: rgb(255, 255, 255);
-  font-size: 18px;
+  font-size: 20px;
+  font-weight: 700;
   text-align: left;
 }
 
