--- a/index.css
+++ b/index.css
@@ -21,19 +21,16 @@ body {
 }
 
 .container {
-  /* max-width: 1200px; */
   margin: 0px auto;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background-color: rgb(255, 4, 4);
 }
 
 h2 {
   margin-top: 0px;
   font-size: 60px;
+  color: rgb(255, 255, 255);
+  text-shadow: rgb(255, 0, 0) 1px 0 15px;
 }
 
-.footer {
-  background-color: chartreuse;
-}
