--- a/css/delivery.css
+++ b/css/delivery.css
@@ -1,25 +1,26 @@
-.delivery {
-  height: 100vh;
-}
-
 .delivery-background {
   background-image: url("../image/49ffd2682143855b5595.jpg");
   background-size: no-repeat;
   background-position: center;
   background-size: cover;
-  height: 100%;
+  min-height: 100vh;
   padding: 150px 50px 50px 50px;
-
-  background: radial-gradient(circle, rgba(180,50,50,1) 10%, rgba(0,0,0,1) 90%);
+  background: radial-gradient( circle farthest-corner at 24.1% 68.8%,  rgba(50,50,50,1) 0%, rgba(0,0,0,1) 99.4% );
 }
 
 .delivery-content * {
   font-size: 40px;
   margin: 0px;
+  color: rgb(255, 255, 255);
+  text-shadow: rgb(255, 0, 0) 1px 0 15px;
 }
 
 .map {
   max-width: 800px;
   margin: 20px auto;
+  padding: 4px;
+  border: 8px solid rgb(255, 255, 255);
+  box-shadow: rgb(255, 255, 255) 1px 0 15px;
+  border-radius: 10px;
 }
 
