--- a/css/footer.css
+++ b/css/footer.css
@@ -1,5 +1,5 @@
 .footer {
-  background: radial-gradient(circle, rgba(180,50,50,1) 10%, rgba(0,0,0,1) 90%);
+  background: radial-gradient( circle farthest-corner at 24.1% 68.8%,  rgba(50,50,50,1) 0%, rgba(0,0,0,1) 99.4% );
   padding: 10px 50px 10px 50px;
 }
 
