--- a/css/footer.css
+++ b/css/footer.css
@@ -19,3 +19,8 @@
 .contacts-menu .map-footer {
   list-style-image: url(../image/footer/карта.png);
 }
+
+.contacts-menu-item a {
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+}
